--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "body-parser": "^1.19.1",
     "express": "^4.17.2"
   },
+  "engines": {
+    "node": "16.13.1"
+  },
   "devDependencies": {
     "nodemon": "^2.0.15"
   }
